--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -1,7 +1,10 @@
-$color-orange: #ee8d1f;
+$color-orange: #d78c2f;
+$color-light-orange: #f4dfd0;
+$color-orange-ppal: #fae7d7;
 $color-light-orange: #fff6ed;
-$color-blue: #00a7bd;
-$colorfont: rgb(31, 31, 31);
+$color-blue: #d3dbca;
+$color-rose: #ff8e8e;
+$color-letras_arts: #dfc8ba;
 
 body{
     margin: 0;
@@ -70,12 +73,9 @@ body{
         width: 90%;
         padding: 1.5em;
         display: flex;
-        //border: solid 1px rgba(0, 0, 0, 0.2);
-        //background: #00a7bd;
     }
     
     &__img{
-        //background: #ee8d1f;
         width: 40%;
         height: 40%;
         margin-right: 5%;
@@ -83,13 +83,12 @@ body{
     
     &__contenido{
         width: 50%;
-        //background: #ee8d1f;
     }
     
     &__nombre{
         font-size: 20px;
         padding: 0.5em 0 0.5em 0;
-        color: $colorfont;
+        color: wheat;
         //background: #00a7bd;
     }
     
@@ -97,7 +96,7 @@ body{
         font-size: 12px;
         margin: 0;
         padding: 0.1em;
-        color: $colorfont;
+        color: wheat;
         //background: #00a7bd;
     }
     
@@ -194,8 +193,6 @@ label{
     height: 35vh;
     display: flex;
     flex-direction: column;
-    //justify-content: center;
-    //align-items: center;
     margin-top: 10%;
     background: #fcfcfc;
     -webkit-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
@@ -205,7 +202,6 @@ label{
     &__info{
         padding: 1em;
         width: 80%;
-        //background: #fff6ed;
         display: flex;
         flex-direction: column;
     }
@@ -217,33 +213,28 @@ label{
 
 .acciones-cantidad{
     display: flex;
-    justify-content: center;
     align-items: center;
-    // background: rebeccapurple;
-    //border: solid rgba(0, 0, 0, 0.2);
     
     &__btn{
         text-align: center;
         vertical-align: middle;
-        width: 35px;
-        height: 35px;
-        //padding: 0.4em;
-        background:  #d78c2f;
-        border: solid 1px  #d78c2f;
+        width: 25px;
+        height: 20px;
+        background: $color-letras_arts;
+        border: solid 1px $color-letras_arts;
         
         &:hover{
-            background:  #b67627; 
-            border: solid 1px  #b67627;
+            background: $color-orange; 
+            border: solid 1px $color-orange;
             cursor: pointer; 
         }
     }
     
     &__num{
         width: 60px;
-        height: 35px;
-        //padding: 0.2em;
-        //background:red;
-        border: solid 1px  #d78c2f;
+        height: 20px;
+        vertical-align: middle;
+        border: solid 1px $color-letras_arts;
         text-align: center;
     }
     
