--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -41,10 +41,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: rgba(0, 0, 0, 0.3);
-  padding: 0.4em;
   position: absolute;
-  left: 253%;
   top: 0%;
 }
 
@@ -59,10 +56,11 @@
   border: none;
   cursor: pointer;
   background: rgba(0, 0, 0, 0.3);
+  margin-left: 1%;
 }
 
 .dropbtn:hover, .dropbtn:focus {
-  background: rgba(0, 0, 0, 0.5);
+  background: #dfc8ba;
 }
 
 .dropdown {
@@ -74,8 +72,8 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
-  top: 82px;
+  background-color: white;
+  top: 70px;
   left: 2px;
   min-width: 160px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -85,7 +83,7 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: pink;
+  color: #dfc8ba;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -93,7 +91,8 @@
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background: rgba(0, 0, 0, 0.3);
+  color: white;
+  background: #dfc8ba;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
