--- a/public/styles/navbar.scss
+++ b/public/styles/navbar.scss
@@ -1,3 +1,10 @@
+$color-orange: #ee8d1f;
+$color-light-orange: #f4dfd0;
+$color-orange-ppal: #fae7d7;
+$color-light-orange: #fff6ed;
+$color-blue: #d3dbca;
+$color-rose: #ff8e8e;
+$color-letras_arts: #dfc8ba;
 
 .menu{
     display: flex;
@@ -25,10 +32,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background: rgba(0, 0, 0, 0.3);
-        padding: 0.4em;
         position: absolute;
-        left: 253%;
         top: 0%;
         
         &__icono {
@@ -47,13 +51,13 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-    //color del boton
-    background: rgba(0, 0, 0, 0.3);
+    background: #dfc8ba;
+    margin-left: 1%;
 }
 
 //Dropdown del boton en hover & focus
 .dropbtn:hover, .dropbtn:focus {
-    background: rgba(0, 0, 0, 0.5);
+    background: $color-letras_arts;
 }
 
 //El container <div> - needed to position the dropdown content
@@ -66,8 +70,8 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
-    top: 82px;
+    background-color: white;
+    top: 70px;
     left: 2px;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -76,7 +80,7 @@
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: pink;
+    color: $color-letras_arts;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -84,8 +88,8 @@
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-
-    background: rgba(0, 0, 0, 0.3);
+    color: white;
+    background: $color-letras_arts;
 
 }
 
