--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -24,13 +24,13 @@
 
     <section class="encabezado">
         <h2 class="encabezado__titulo">Carrito de compras</h2>
-        <p class="encabezado__continuar"><a href="/tienda">Continuar compras</a></p>
+        <p class="encabezado__continuar"><a class="encabezado__a" href="/tienda">Continuar compras</a></p>
     </section>
 
     <section class="carrito">
         <div class="carrito__productos">
 
-            <h3 class="carrito__titulo">Carrito de Compras</h3>
+            <h3 class="carrito__titulo">Productos</h3>
             <div class="lista__carrito">
 
             </div>
@@ -85,7 +85,7 @@
                     </select>
                 </div>
 
-                <button class="pago-sin__btn" onclick="registrar()">Confirmar y realizar pago</button>
+                <button class="pago-sin__btn pago-sin__btn1" onclick="registrar()">Confirmar y realizar pago</button>
 
             </div>
         </div>
