--- a/views/carrito.handlebars
+++ b/views/carrito.handlebars
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="/styles/navbar.css">
     <link rel="stylesheet" href="/styles/carrito.css">
-    <title>Carrito de Compras</title>
+    <title>Carrito de Compras | ARTS</title>
 </head>
 
 <body>
@@ -60,7 +60,7 @@
             <p class="carrito__resumen-envio">Envio <a class="carrito-resumen__envio-valor">8000</a></p>
             <p class="carrito__resumen-total">Total <a class="carrito-resumen__total-valor">752</a></p>
 
-            <hr>
+            <hr class="carrito__resumen-hr">
 
             <div class="pago-sin">
 
@@ -93,7 +93,6 @@
     </section>
 
     <div id="myModal" class="modal">
-
         <!-- Modal content -->
         <div class="modal-contenido">
             <span class="cerrar">X</span>
