--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -13,7 +13,7 @@
                     <a href="/tienda/papeleria">Papelería</a>
                     <a href="/tienda/escritura">Escritura</a>
                     <a href="/tienda/arquitectura">Arquitectura</a>
-                    <a href="/tienda">Ver todo</a>
+                    <a href="/tienda">Sin categoria</a>
                 </div>
             </div>
 
