--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -5,7 +5,9 @@ $color-light-orange: #fff6ed;
 $color-blue: #d3dbca;
 $color-rose: #ff8e8e;
 $color-letras_arts: #dfc8ba;
+$color-font: #888;
 $tam-titulo: 35px;
+$tam-titulo-m: 25px;
 $tam-font: 16px;
 $tam-peque: 13px;
 
@@ -20,21 +22,23 @@ body{
     position: absolute;
     top: 15%;
     left: 5%;
-    margin: auto;  
+    margin: auto;
     //background: #00a7bd;
-    
+
     &__titulo{
+        width: 100%;
         font-family: 'Homemade Apple', cursive;
         font-size: $tam-titulo;
         text-align: center;
         margin: 0;
+        color: $color-font;
     }
-    
+
     &__continuar{
         text-align: end;
         color: $color-rose;
     }
-    
+
     &__a{
         color: $color-rose;
         text-decoration: none;
@@ -49,31 +53,51 @@ body{
     margin: auto;
     display: flex;
     flex-direction: row;
-    
+
+    &__titulo{
+        font-family: 'Homemade Apple', cursive;
+        font-size: $tam-titulo-m;
+        color:$color-font;
+        margin: 0;
+        padding: 0;
+    }
+
     &__productos{
         width: 70%;
     }
-    
+
     &__resumen{
         width: 30%;
         height: 100%;
-        border: solid 1px rgba(0, 0, 0, 0.2);
+        // border: solid 1px rgba(0, 0, 0, 0.2);
+        background: $color-orange-ppal;
         padding: 1.5em;
-        
+        margin: auto;
+
         &-titulo{
-            
+            font-family: 'Homemade Apple', cursive;
+            font-size: $tam-titulo-m;
+            color:$color-font;
+            margin: 0;
+            padding: 0;
         }
-        
+
         &-subtotal{
-            
+            color:$color-font;
         }
-        
+
         &-envio{
-            
+            color:$color-font;
         }
-        
+
         &-total{
-            
+            color: $color-rose;
+        }
+
+        &-hr{
+            height: 2px;
+            background-color: $color-letras_arts;
+            border: none;
         }
     }
 }
@@ -82,30 +106,30 @@ body{
     &__a{
         text-decoration: none;
     }
-    
+
     &__contenedor{
         width: 90%;
         padding: 1.5em;
         display: flex;
     }
-    
+
     &__img{
         width: 40%;
         height: 40%;
         margin-right: 5%;
     }
-    
+
     &__contenido{
         width: 50%;
     }
-    
+
     &__nombre{
-        font-size: 20px;
+        font-size: $tam-font;
         padding: 0.5em 0 0.5em 0;
         color: $color-blue;
         //background: #00a7bd;
     }
-    
+
     &__tipo{
         font-size: $tam-peque;
         margin: 0;
@@ -113,28 +137,30 @@ body{
         color: $color-letras_arts;
         //background: #00a7bd;
     }
-    
+
     &__precio{
-        font-size: 15px;
+        font-size: $tam-font;
         color: $color-rose;
-    }  
-    
+    }
+
     &__x{
         width: 10%;
         display: flex;
         justify-content: center;
         align-items: center;
         //background: pink;
-        
+
         &-item{
             width: 40px;
             height: 40px;
             color:rgba(0, 0, 0, 0.2);
+            -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
             &:hover{
                 color:rgb(255, 78, 78);
             }
         }
-        
+
         &:hover{
             cursor: pointer;
         }
@@ -147,20 +173,20 @@ body{
     display: flex;
     flex-direction: column;
     margin-top: 5%;
-    background: #fcfcfc;
+    background: $color-blue;
     -webkit-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
     -moz-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
     box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
-    
+
     &__info{
         padding: 1em;
         width: 80%;
         //background: #fff6ed;
         display: flex;
         flex-direction: column;
-        
-        
+
         &-nombre{
+            color: $color-font;
             width: 140px;
             box-sizing: border-box;
             border: 2px solid #ccc;
@@ -169,13 +195,14 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-            
+
             &:focus{
                 width: 100%;
             }
         }
-        
+
         &-cc{
+            color: $color-font;
             width: 140px;
             box-sizing: border-box;
             border: 2px solid #ccc;
@@ -184,13 +211,14 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-            
+
             &:focus{
                 width: 100%;
             }
         }
-        
+
         &-dir{
+            color: $color-font;
             width: 140px;
             box-sizing: border-box;
             border: 2px solid #ccc;
@@ -199,31 +227,31 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-            
+
             &:focus{
                 width: 100%;
             }
         }
     }
-    
+
     &__btn{
-        width: 80%;      
+        width: 80%;
         margin: 1em;
         padding: 0.5em;
         border-radius: 12em;
         text-align: center;
-        font-size: 13px;
+        font-size: $tam-peque;
         font-weight: bold;
         -webkit-transition-duration: 0.4s;
         transition-duration: 0.4s;
         cursor: pointer;
     }
-    
+
     &__btn1{
-        background-color: white; 
-        color: $color-letras_arts; 
+        background-color: white;
+        color: $color-letras_arts;
         border: 0.1em solid  $color-letras_arts;
-        
+
         &:hover {
             background-color: $color-letras_arts;
             color: white;
@@ -234,7 +262,7 @@ body{
 
 .pago-sin__info-medio {
     border-radius: 4px;
-    
+
     &:after{
         position: absolute;
         content: "";
@@ -248,55 +276,52 @@ body{
 }
 
 .pago-sin__info-medio-items div,.pago-sin__info-medio {
-    color: $color-letras_arts;
+    color: $color-font;
     padding: 8px 16px;
     border: 2px solid #ccc;
     cursor: pointer;
     user-select: none;
 }
 
-
 label{
     padding: 0.5em;
 }
 
 .campo-obligatorio{
-    
     &__nombre{
-        font-size: 10px;
+        // font-size: 10px;
         color: red;
     }
-    
+
     &__cc{
-        font-size: 10px;
+        // font-size: 10px;
         color: red;
     }
-    
+
     &__dir{
-        font-size: 10px;
-        color: red;   
+        // font-size: 10px;
+        color: red;
     }
-    
+
 }
 
 
 .campo{
-    
     &-visible{
         font-size: 10px;
         color: red;
     }
-    
+
     &-invisible {
         font-size: 10px;
-        color: white;
+        color: $color-blue;
     }
 }
 
 .acciones-cantidad{
     display: flex;
     align-items: center;
-    
+
     &__btn{
         text-align: center;
         vertical-align: middle;
@@ -307,21 +332,21 @@ label{
         color: $color-letras_arts;
         -webkit-transition-duration: 0.4s;
         transition-duration: 0.4s;
-        
+
         &:hover{
-            background: $color-letras_arts; 
+            background: $color-letras_arts;
             border: solid 1px $color-letras_arts;
-            cursor: pointer; 
+            cursor: pointer;
             color: white;
         }
     }
-    
+
     &__num{
         color: black;
         font-weight: bolder;
         width: 60px;
         height: 20px;
-        font-size: 15px;
+        font-size: $tam-peque;
         vertical-align: middle;
         border: solid 1px $color-letras_arts;
         text-align: center;
@@ -354,12 +379,106 @@ label{
 .cerrar {
     color: #aaa;
     float: right;
-    font-size: 18px;
+    font-size: $tam-font;
     font-weight: bold;
-    
+
     &:hover, &:focus {
         color: black;
         text-decoration: none;
         cursor: pointer;
     }
+}
+
+@media (max-width: 360px){
+
+    $tam-titulo-responsive: 30px;
+    $tam-titulo-m-responsive: 20px;
+    $tam-font-responsive: 13px;
+    $tam-peque-responsive: 8px;
+
+    .body{
+        font-size: $tam-font-responsive;
+    }
+
+
+    .encabezado{
+        width: 90%;
+        top: 15%;
+        left: 5%;
+
+        &__titulo{
+            font-size: 28px;
+        }
+    }
+
+    .lista__carrito{
+        width: 100%;
+    }
+
+    .carrito{
+        width: 100%;
+        left: 0%;
+        flex-direction: column;
+        justify-content: center;
+
+        &__titulo{
+            padding: 1em;
+            font-size: $tam-titulo-m-responsive;
+        }
+
+        &__productos{
+            width: 90%;
+        }
+
+        &__resumen{
+            width: 87%;
+            height: 100%;
+            background: $color-orange-ppal;
+
+            &-titulo{
+                font-size: $tam-titulo-m-responsive;
+            }
+        }
+    }
+
+    .producto{
+        &__contenedor{
+            width: 90%;
+        }
+
+        &__img{
+            width: 40%;
+            height: 40%;
+            margin-right: 5%;
+        }
+
+        &__contenido{
+            width: 50%;
+        }
+
+        &__nombre{
+            font-size: $tam-font-responsive;
+        }
+
+        &__tipo{
+            font-size: $tam-peque-responsive;
+        }
+
+        &__precio{
+            font-size: $tam-font-responsive;
+        }
+
+        &__x{
+            width: 10%;
+
+            &-item{
+                width: 40px;
+                height: 40px;
+                color:rgb(255, 78, 78);
+            }
+        }
+    }
+
+
+
 }
