--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,13 +1,13 @@
 <footer class="pie">
         <section class="pie-a">
-            <div>
+            <div class="pie__logo-c">
                 <img src="/img/logo_b.png" class="pie__logo">
             </div>
 
             <div class="pie-redes">
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
+                <a class="pie__red-icono-a" href=""><i class="fab fa-facebook-f pie__red-icono"></i></a>
+                <a class="pie__red-icono-a" href=""> <i class="fab fa-instagram pie__red-icono"></i></a>
+                <a class="pie__red-icono-a" href=""><i class="fab fa-twitter pie__red-icono"></i></a>
             </div>
         </section>
 
