--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -11,6 +11,7 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/producto.css">
     <title>Producto Detallado | {{nombre}}</title>
 </head>
@@ -60,8 +61,10 @@
 
     </section>
 
+    {{> footer}}
+
     <script src="/scripts/producto.js"></script>
-    
+
 </body>
 
 </html>
