--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="/styles/footer.css">
     <link rel="stylesheet" href="/styles/tienda.css">
 
     <title>Tienda ARTS | for artist lovers</title>
@@ -149,6 +150,8 @@
         </ul>
 
     </section>
+
+    {{> footer}}
 
     <script src="/scripts/tienda.js"></script>
 
