--- a/public/styles/carrito.scss
+++ b/public/styles/carrito.scss
@@ -24,7 +24,7 @@ body{
     left: 5%;
     margin: auto;
     //background: #00a7bd;
-
+    
     &__titulo{
         width: 100%;
         font-family: 'Homemade Apple', cursive;
@@ -33,12 +33,12 @@ body{
         margin: 0;
         color: $color-font;
     }
-
+    
     &__continuar{
         text-align: end;
         color: $color-rose;
     }
-
+    
     &__a{
         color: $color-rose;
         text-decoration: none;
@@ -53,7 +53,7 @@ body{
     margin: auto;
     display: flex;
     flex-direction: row;
-
+    
     &__titulo{
         font-family: 'Homemade Apple', cursive;
         font-size: $tam-titulo-m;
@@ -61,19 +61,18 @@ body{
         margin: 0;
         padding: 0;
     }
-
+    
     &__productos{
         width: 70%;
     }
-
+    
     &__resumen{
         width: 30%;
         height: 100%;
-        // border: solid 1px rgba(0, 0, 0, 0.2);
         background: $color-orange-ppal;
         padding: 1.5em;
-        margin: auto;
-
+        margin: 0;
+        
         &-titulo{
             font-family: 'Homemade Apple', cursive;
             font-size: $tam-titulo-m;
@@ -81,19 +80,19 @@ body{
             margin: 0;
             padding: 0;
         }
-
+        
         &-subtotal{
             color:$color-font;
         }
-
+        
         &-envio{
             color:$color-font;
         }
-
+        
         &-total{
             color: $color-rose;
         }
-
+        
         &-hr{
             height: 2px;
             background-color: $color-letras_arts;
@@ -106,30 +105,30 @@ body{
     &__a{
         text-decoration: none;
     }
-
+    
     &__contenedor{
         width: 90%;
         padding: 1.5em;
         display: flex;
     }
-
+    
     &__img{
         width: 40%;
         height: 40%;
         margin-right: 5%;
     }
-
+    
     &__contenido{
         width: 50%;
     }
-
+    
     &__nombre{
         font-size: $tam-font;
         padding: 0.5em 0 0.5em 0;
         color: $color-blue;
         //background: #00a7bd;
     }
-
+    
     &__tipo{
         font-size: $tam-peque;
         margin: 0;
@@ -137,19 +136,19 @@ body{
         color: $color-letras_arts;
         //background: #00a7bd;
     }
-
+    
     &__precio{
         font-size: $tam-font;
         color: $color-rose;
     }
-
+    
     &__x{
         width: 10%;
         display: flex;
         justify-content: center;
         align-items: center;
         //background: pink;
-
+        
         &-item{
             width: 40px;
             height: 40px;
@@ -160,7 +159,7 @@ body{
                 color:rgb(255, 78, 78);
             }
         }
-
+        
         &:hover{
             cursor: pointer;
         }
@@ -177,14 +176,14 @@ body{
     -webkit-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
     -moz-box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
     box-shadow: 9px 9px 10px -3px rgba(0,0,0,0.2);
-
+    
     &__info{
         padding: 1em;
         width: 80%;
         //background: #fff6ed;
         display: flex;
         flex-direction: column;
-
+        
         &-nombre{
             color: $color-font;
             width: 140px;
@@ -195,12 +194,12 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-
+            
             &:focus{
                 width: 100%;
             }
         }
-
+        
         &-cc{
             color: $color-font;
             width: 140px;
@@ -211,12 +210,12 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-
+            
             &:focus{
                 width: 100%;
             }
         }
-
+        
         &-dir{
             color: $color-font;
             width: 140px;
@@ -227,13 +226,13 @@ body{
             padding: 0.5em;
             -webkit-transition: width 0.4s ease-in-out;
             transition: width 0.4s ease-in-out;
-
+            
             &:focus{
                 width: 100%;
             }
         }
     }
-
+    
     &__btn{
         width: 80%;
         margin: 1em;
@@ -246,12 +245,12 @@ body{
         transition-duration: 0.4s;
         cursor: pointer;
     }
-
+    
     &__btn1{
         background-color: white;
         color: $color-letras_arts;
         border: 0.1em solid  $color-letras_arts;
-
+        
         &:hover {
             background-color: $color-letras_arts;
             color: white;
@@ -262,7 +261,7 @@ body{
 
 .pago-sin__info-medio {
     border-radius: 4px;
-
+    
     &:after{
         position: absolute;
         content: "";
@@ -292,17 +291,17 @@ label{
         // font-size: 10px;
         color: red;
     }
-
+    
     &__cc{
         // font-size: 10px;
         color: red;
     }
-
+    
     &__dir{
         // font-size: 10px;
         color: red;
     }
-
+    
 }
 
 
@@ -311,7 +310,7 @@ label{
         font-size: 10px;
         color: red;
     }
-
+    
     &-invisible {
         font-size: 10px;
         color: $color-blue;
@@ -321,7 +320,7 @@ label{
 .acciones-cantidad{
     display: flex;
     align-items: center;
-
+    
     &__btn{
         text-align: center;
         vertical-align: middle;
@@ -332,7 +331,7 @@ label{
         color: $color-letras_arts;
         -webkit-transition-duration: 0.4s;
         transition-duration: 0.4s;
-
+        
         &:hover{
             background: $color-letras_arts;
             border: solid 1px $color-letras_arts;
@@ -340,7 +339,7 @@ label{
             color: white;
         }
     }
-
+    
     &__num{
         color: black;
         font-weight: bolder;
@@ -381,7 +380,7 @@ label{
     float: right;
     font-size: $tam-font;
     font-weight: bold;
-
+    
     &:hover, &:focus {
         color: black;
         text-decoration: none;
@@ -390,87 +389,87 @@ label{
 }
 
 @media (max-width: 360px){
-
+    
     $tam-titulo-responsive: 30px;
     $tam-titulo-m-responsive: 20px;
     $tam-font-responsive: 13px;
     $tam-peque-responsive: 8px;
-
+    
     .body{
         font-size: $tam-font-responsive;
     }
-
-
+    
+    
     .encabezado{
         width: 90%;
         top: 15%;
         left: 5%;
-
+        
         &__titulo{
             font-size: 28px;
         }
     }
-
+    
     .lista__carrito{
         width: 100%;
     }
-
+    
     .carrito{
         width: 100%;
         left: 0%;
         flex-direction: column;
         justify-content: center;
-
+        
         &__titulo{
             padding: 1em;
             font-size: $tam-titulo-m-responsive;
         }
-
+        
         &__productos{
             width: 90%;
         }
-
+        
         &__resumen{
             width: 87%;
             height: 100%;
             background: $color-orange-ppal;
-
+            
             &-titulo{
                 font-size: $tam-titulo-m-responsive;
             }
         }
     }
-
+    
     .producto{
         &__contenedor{
             width: 90%;
         }
-
+        
         &__img{
             width: 40%;
             height: 40%;
             margin-right: 5%;
         }
-
+        
         &__contenido{
             width: 50%;
         }
-
+        
         &__nombre{
             font-size: $tam-font-responsive;
         }
-
+        
         &__tipo{
             font-size: $tam-peque-responsive;
         }
-
+        
         &__precio{
             font-size: $tam-font-responsive;
         }
-
+        
         &__x{
             width: 10%;
-
+            
             &-item{
                 width: 40px;
                 height: 40px;
@@ -478,7 +477,7 @@ label{
             }
         }
     }
-
-
-
+    
+    
+    
 }
