--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -2,24 +2,19 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100px;
-  -ms-flex-preferred-size: 68px;
-      flex-basis: 68px;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  width: 100%;
+  height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 5%;
+  margin-top: 1%;
   background: black;
 }
 
 .pie-a {
   width: 100%;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,20 +25,17 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #00a7bd;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
 }
 
 .pie__logo {
-  width: 30%;
-  height: 60%;
   margin: 0;
-  padding: 0.7em;
+  padding: 1em;
   margin-left: 40%;
+}
+
+.pie__logo-c {
+  width: 50%;
+  height: 50%;
 }
 
 .pie-redes {
@@ -54,10 +46,25 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  width: 50%;
+  height: 100%;
+  margin: 0;
+  padding: 0.7em;
+  margin-left: 60%;
 }
 
 .pie__red-icono {
-  color: rebeccapurple;
+  padding: 0.5em;
+}
+
+.pie__red-icono-a {
+  width: 20%;
+  text-decoration: none;
+  color: #888;
+}
+
+.pie__red-icono-a:hover {
+  color: white;
 }
 
 .pie-linea {
@@ -66,7 +73,7 @@
 }
 
 .pie-contacto {
-  color: red;
+  color: white;
   margin-left: 5%;
   padding: 1em;
 }
